# libxdiff

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h.in  configure  configure.ac  libxdiff.pc.in  xdiff.h  xdiffi.c  xemit.c  xhistogram.c  xinclude.h  xprepare.c  xutils.c
